TG-1224:Form background stretched image resolved

--- a/tag_workflow/public/css/tag.css
+++ b/tag_workflow/public/css/tag.css
@@ -149,8 +149,10 @@ input:visited{
 #page-Company .user-bg
 {
     background: url("/assets/tag_workflow/images/background.jpg");
-    background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    min-height: 640px;
 }
 .signature-field { 
     overflow: auto;
